// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarkdownSynapse tests > Snapshot tests > supports bootstrap rows and columns 1`] = `
<div>
  <div
    class="markdown"
    data-testid="markdown"
  >
    <div
      class="container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-4"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-xmjzya-MuiTypography-root"
          >
            Left
          </p>
          

        </div>
        

        <div
          class="col-sm-4"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-xmjzya-MuiTypography-root"
          >
            Center
          </p>
          

        </div>
        

        <div
          class="col-sm-4"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-xmjzya-MuiTypography-root"
          >
            Right
          </p>
          

        </div>
        

      </div>
    </div>
    

  </div>
</div>
`;

exports[`MarkdownSynapse tests > Snapshot tests > works with a br statement and loose text 1`] = `
<div>
  <div
    class="markdown"
    data-testid="markdown"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-xmjzya-MuiTypography-root"
    >
      some more free
    </p>
    

    <h1
      class="MuiTypography-root MuiTypography-headline1 css-40zh3-MuiTypography-root"
      id="SRC-header-1"
      toc="true"
    >
      header
    </h1>
    

    <p
      class="MuiTypography-root MuiTypography-body1 css-xmjzya-MuiTypography-root"
    >
      loose text
    </p>
    

  </div>
</div>
`;

exports[`MarkdownSynapse tests > Snapshot tests > works with header and a link 1`] = `
<div>
  <div
    class="markdown"
    data-testid="markdown"
  >
    <h1
      class="MuiTypography-root MuiTypography-headline1 css-40zh3-MuiTypography-root"
      id="SRC-header-1"
      toc="true"
    >
      header 
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-mj2bo0-MuiTypography-root-MuiLink-root"
        href="https://synapse.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        text
      </a>
    </h1>
    

  </div>
</div>
`;

exports[`MarkdownSynapse tests > Snapshot tests > works with two inline widgets 1`] = `
<div>
  <div
    class="markdown"
    data-testid="markdown"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-xmjzya-MuiTypography-root"
    >
      <span>
        <a
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary css-i9dpmq-MuiButtonBase-root-MuiButton-root-WideButton"
          href="#/Help/How It Works"
          tabindex="0"
        >
          sometext
        </a>
      </span>
      <span>
        <a
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary css-i9dpmq-MuiButtonBase-root-MuiButton-root-WideButton"
          href="#/Apply"
          tabindex="0"
        >
          APPLY
        </a>
      </span>
    </p>
    

  </div>
</div>
`;

exports[`MarkdownSynapse tests > Snapshot tests > works with two inline widgets inside Router 1`] = `
<div>
  <div
    class="markdown"
    data-testid="markdown"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-xmjzya-MuiTypography-root"
    >
      <span>
        <a
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary css-i9dpmq-MuiButtonBase-root-MuiButton-root-WideButton"
          data-discover="true"
          href="/#/Help/How It Works"
          tabindex="0"
        >
          sometext
        </a>
      </span>
      <span>
        <a
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary css-i9dpmq-MuiButtonBase-root-MuiButton-root-WideButton"
          data-discover="true"
          href="/#/Apply"
          tabindex="0"
        >
          APPLY
        </a>
      </span>
    </p>
    

  </div>
</div>
`;
